// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacer /> renders bottom correctly 1`] = `
.cfrKdS {
  margin-top: 0;
  margin-bottom: 1rem;
  margin-left: 0;
  margin-right: 0;
}

<div
  className="sc-bdVaJa cfrKdS"
/>
`;

exports[`<Spacer /> renders correctly 1`] = `
.dJmyIz {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
}

<div
  className="sc-bdVaJa dJmyIz"
/>
`;

exports[`<Spacer /> renders left correctly 1`] = `
.kGSnBO {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 1rem;
  margin-right: 0;
}

<div
  className="sc-bdVaJa kGSnBO"
/>
`;

exports[`<Spacer /> renders right correctly 1`] = `
.cFxmSh {
  margin-top: 0;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 1rem;
}

<div
  className="sc-bdVaJa cFxmSh"
/>
`;

exports[`<Spacer /> renders top correctly 1`] = `
.hXpbAn {
  margin-top: 1rem;
  margin-bottom: 0;
  margin-left: 0;
  margin-right: 0;
}

<div
  className="sc-bdVaJa hXpbAn"
/>
`;
